# berintmoffett-com

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  arcane-p2e.html  blog.db  docker-compose.yml  dump.rdb  files.csv  flake.nix  h  index.html  index.js  mdxeditor  package-lock.json  package.json  restart.sh  rustfmt.toml  schema.sql  server.js  setup.sh  snake_highscores.csv  start  start.sh  start_dev.sh  tsconfig.json  tsconfig.tsbuildinfo  update  watch
assets/: about_me.md
assets/lessons/: Lesson Details 7-26-23.md  Lesson Policy 7-24-23 web.md  Lesson Policy 7-24-23.md
client/: context_state_config.tsx  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  webpack.config.js
client/public/posts/: about_me.md
client/src/: app.tsx  index.d.ts  index.tsx
client/src/components/: LoginForm.tsx  dropdown.tsx  game_entry.tsx  markdown.tsx  navbar.tsx  table.tsx  tooltip.tsx  (+1 more)
client/static/: about-me.md  about.md  bio.md  index.bundle.js  index.html  rust-snake.html  shake-chess.html
posts/: another_post.md
server/: api-router.ts  database.js  db.ts  index.js  server.ts  test.js  types.d.ts
src/: App.css  NavBar.js  about_me.rs  api.rs  app.rs  auth.rs  database.rs  index.js  lessons.rs  lib.rs  login.rs  main.rs  navbar.rs  network.rs  startup.rs  text_edit.rs  utils.rs
src/css/: arcane-p2e.css  index.css  layout.css  ttrpg.css
src/database/: merchant.rs  mod.rs  snake.rs
src/pages/: About.js  Compositions.js  Home.js  Layout.js  NotFound.js  TTRPG.js
static/css/: arcane-p2e.css
(+47 files in other folders)
