[package]
name = "berintmoffett-com"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.4", features = ["macros"] }
csv = "1.3.0"
dotenv = "0.15.0"
flate2 = "1.0.28"
reqwest = "0.11.24"
serde = { version = "1.0.195", features = ["serde_derive"] }
serde_json = "1.0.111"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "sqlite"] }
tar = "0.4.40"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
